[package]
name = "htapod"
version = "1.0.0"
edition = "2021"

[dependencies]
async-send-fd = { version = "1.2.0", features = ["tokio"] }
clap = { version = "4.5.29", features = ["derive"] }
env_logger = "0.11.7"
futures = "0.3.31"
futures-util = "0.3.31"
httparse = "1.10.1"
ipnet = "2.11.0"
ipnetwork = "0.21.1"
libc = "0.2.170"
log = "0.4.26"
netstack-smoltcp = "0.1.3"
nix = { version = "0.29.0", features = ["mount", "sched"] }
rcgen = "0.13.2"
rtnetlink = "0.14.1"
rustls = "0.23.26"
rustls-pki-types = "1.12.0"
rustls-platform-verifier = "0.5.2"
#reqwest = { version = "0.12.26", features = ["stream"] }
tempfile = "3.19.1"
time = "0.3.41"
tokio = { version = "1.43.0", features = ["fs", "macros", "process", "rt", "net"] }
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7.13", features = ["codec", "io"] }
tun = { version = "0.7.13", features = ["async"] }
users = "0.11.0"

hyper = { version = "1.8.1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1.19", features = ["tokio"]}

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.43.0", features = ["fs", "macros", "process", "rt", "rt-multi-thread"] }
hyper-rustls = { version = "0.27.7", features = ["http1"]}
